--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,6 +9,7 @@
         <!--<item name="android:windowTranslucentStatus">true</item>-->
         <item name="android:autofilledHighlight" tools:targetApi="o">@android:color/transparent</item>
         <item name="android:windowActivityTransitions" tools:targetApi="lollipop">true</item>
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay.v14.Material</item>
 
     </style>
 
