--- a/app/src/main/res/layout/active_leads_card.xml
+++ b/app/src/main/res/layout/active_leads_card.xml
@@ -1,6 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
-</LinearLayout>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintDimensionRatio="244:122"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
+
+
+        <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="24dp"
+                    android:fontFamily="@font/brandontext_medium"
+                    android:text="Abhishek Singh"
+                    android:textColor="@color/heading_dark"
+                    android:textSize="22sp"
+                    app:layout_constraintBottom_toTopOf="@+id/description"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <TextView
+                    android:id="@+id/description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginTop="16dp"
+                    android:fontFamily="@font/brandontext_medium"
+                    android:text="Class 9th-Topper"
+                    android:textColor="@color/heading_lighter"
+                    android:textSize="18sp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/name" />
+
+                <ImageView
+                    android:id="@+id/imageView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:src="@drawable/icon_edit"
+                    android:tint="@color/heading_lighter"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip_whatsapp"
+                    style="@style/Widget.MaterialComponents.Chip.Action"
+                    android:layout_width="140dp"
+                    android:layout_height="45dp"
+                    android:layout_marginStart="24dp"
+                    android:layout_marginBottom="24dp"
+                    android:checkable="true"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:paddingLeft="-5dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="WhatsApp"
+                    android:textAppearance="@style/WhatsappChipAppearance"
+                    android:textColor="#32B322"
+                    android:textSize="25sp"
+                    app:chipBackgroundColor="#F5F5F5"
+                    app:chipCornerRadius="22dp"
+                    app:chipIcon="@drawable/ic_whatsapp"
+                    app:chipIconSize="30dp"
+                    app:chipStartPadding="10dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" />
+
+                <com.google.android.material.chip.Chip
+                    android:id="@+id/chip_call"
+                    style="@style/Widget.MaterialComponents.Chip.Action"
+                    android:layout_width="100dp"
+                    android:layout_height="45dp"
+                    android:layout_marginStart="40dp"
+                    android:checkable="true"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:gravity="center"
+                    android:paddingLeft="-5dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="Call"
+                    android:textAppearance="@style/WhatsappChipAppearance"
+                    android:textColor="#037EF3"
+                    android:textSize="25sp"
+                    app:chipBackgroundColor="#F5F5F5"
+                    app:chipCornerRadius="22dp"
+                    app:chipIcon="@drawable/ic_call"
+                    app:chipIconSize="30dp"
+                    app:chipStartPadding="10dp"
+                    app:layout_constraintBottom_toBottomOf="@+id/chip_whatsapp"
+                    app:layout_constraintStart_toEndOf="@+id/chip_whatsapp"
+                    app:layout_constraintTop_toTopOf="@+id/chip_whatsapp" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.cardview.widget.CardView>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
