--- a/app/src/main/res/layout/active_leads_card.xml
+++ b/app/src/main/res/layout/active_leads_card.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical">
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="0dp"
@@ -13,10 +18,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-
         <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            app:cardElevation="2dp"
+            app:cardCornerRadius="12dp"
+            app:cardUseCompatPadding="true">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
@@ -42,15 +49,17 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="16dp"
+                    android:layout_marginBottom="16dp"
                     android:fontFamily="@font/brandontext_medium"
                     android:text="Class 9th-Topper"
                     android:textColor="@color/heading_lighter"
                     android:textSize="18sp"
+                    app:layout_constraintBottom_toTopOf="@+id/chip_whatsapp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/name" />
 
                 <ImageView
-                    android:id="@+id/imageView3"
+                    android:id="@+id/edit"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
@@ -67,7 +76,7 @@
                     android:layout_height="45dp"
                     android:layout_marginStart="24dp"
                     android:layout_marginBottom="24dp"
-                    android:checkable="true"
+                    android:checkable="false"
                     android:clickable="true"
                     android:focusable="true"
                     android:gravity="center"
@@ -92,7 +101,7 @@
                     android:layout_width="100dp"
                     android:layout_height="45dp"
                     android:layout_marginStart="40dp"
-                    android:checkable="true"
+                    android:checkable="false"
                     android:clickable="true"
                     android:focusable="true"
                     android:gravity="center"
@@ -116,5 +125,6 @@
         </androidx.cardview.widget.CardView>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
