--- a/app/src/main/res/layout/missed_follow_ups_card.xml
+++ b/app/src/main/res/layout/missed_follow_ups_card.xml
@@ -49,18 +49,18 @@
                 app:layout_constraintTop_toBottomOf="@+id/name" />
 
             <ImageView
-                android:id="@+id/imageView2"
+                android:id="@+id/edit"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="16dp"
                 android:src="@drawable/icon_edit"
                 android:tint="#F4F4F4"
-                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
-                app:layout_constraintEnd_toStartOf="@+id/imageView3"
-                app:layout_constraintTop_toTopOf="@+id/imageView3" />
+                app:layout_constraintBottom_toBottomOf="@+id/delete"
+                app:layout_constraintEnd_toStartOf="@+id/delete"
+                app:layout_constraintTop_toTopOf="@+id/delete" />
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/delete"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
