--- a/app/src/main/res/layout/activity_get_started.xml
+++ b/app/src/main/res/layout/activity_get_started.xml
@@ -67,7 +67,7 @@
         android:fontFamily="@font/brandontext_bold"
         android:text="Get Started for FREE"
         android:textAllCaps="false"
-        android:textColor="#fff"
+        android:textColor="@color/white"
         android:textSize="22sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
