--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -112,7 +112,7 @@
                             app:layout_constraintTop_toTopOf="parent" />
 
                         <TextView
-                            android:id="@+id/textView10"
+                            android:id="@+id/brochure_subheading"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginStart="16dp"
@@ -125,7 +125,7 @@
                             app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
                         <TextView
-                            android:id="@+id/textView9"
+                            android:id="@+id/brochure_link"
                             android:layout_width="wrap_content"
                             android:layout_height="0dp"
                             android:layout_marginTop="24dp"
@@ -135,13 +135,13 @@
                             android:textColor="@color/colorPrimary"
                             android:textSize="16sp"
                             android:gravity="center"
-                            app:layout_constraintEnd_toStartOf="@+id/textView8"
+                            app:layout_constraintEnd_toStartOf="@+id/download_link"
                             app:layout_constraintHorizontal_bias="0.5"
                             app:layout_constraintStart_toStartOf="parent"
-                            app:layout_constraintTop_toBottomOf="@+id/textView10" />
+                            app:layout_constraintTop_toBottomOf="@+id/brochure_subheading" />
 
                         <TextView
-                            android:id="@+id/textView8"
+                            android:id="@+id/download_link"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:drawableStart="@drawable/ic_file_download"
@@ -150,11 +150,11 @@
                             android:gravity="center"
                             android:textColor="@color/colorPrimary"
                             android:textSize="16sp"
-                            app:layout_constraintBottom_toBottomOf="@+id/textView9"
+                            app:layout_constraintBottom_toBottomOf="@+id/brochure_link"
                             app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintHorizontal_bias="0.5"
-                            app:layout_constraintStart_toEndOf="@+id/textView9"
-                            app:layout_constraintTop_toTopOf="@+id/textView9" />
+                            app:layout_constraintStart_toEndOf="@+id/brochure_link"
+                            app:layout_constraintTop_toTopOf="@+id/brochure_link" />
 
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -173,6 +173,7 @@
                         android:foregroundGravity="center">
 
                         <TextView
+                            android:id="@+id/product_name"
                             android:layout_gravity="center"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
