Added Floating Action Button!

--- a/app/src/main/res/layout/fragment_crm.xml
+++ b/app/src/main/res/layout/fragment_crm.xml
@@ -151,5 +151,18 @@
 
     </RelativeLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:clickable="true"
+        app:elevation="4dp"
+        android:src="@android:drawable/ic_input_add"
+        android:tint="@color/white"/>
+
 
 </RelativeLayout>
