Extracted all the strings! Product Details Set.

--- a/app/src/main/res/layout/active_leads_card.xml
+++ b/app/src/main/res/layout/active_leads_card.xml
@@ -36,7 +36,7 @@
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="24dp"
                     android:fontFamily="@font/brandontext_medium"
-                    android:text="Abhishek Singh"
+                    android:text="@string/abhishek_singh"
                     android:textColor="@color/heading_dark"
                     android:textSize="22sp"
                     app:layout_constraintBottom_toTopOf="@+id/description"
@@ -51,7 +51,7 @@
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="16dp"
                     android:fontFamily="@font/brandontext_medium"
-                    android:text="Class 9th-Topper"
+                    android:text="@string/class_9th_topper"
                     android:textColor="@color/heading_lighter"
                     android:textSize="18sp"
                     app:layout_constraintBottom_toTopOf="@+id/chip_whatsapp"
@@ -83,7 +83,7 @@
                     android:paddingLeft="-5dp"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp"
-                    android:text="WhatsApp"
+                    android:text="@string/whatsapp"
                     android:textAppearance="@style/WhatsappChipAppearance"
                     android:textColor="#32B322"
                     android:textSize="25sp"
@@ -108,7 +108,7 @@
                     android:paddingLeft="-5dp"
                     android:paddingTop="5dp"
                     android:paddingBottom="5dp"
-                    android:text="Call"
+                    android:text="@string/call"
                     android:textAppearance="@style/WhatsappChipAppearance"
                     android:textColor="#037EF3"
                     android:textSize="25sp"
