--- a/app/src/main/res/layout/activity_add_lead_customer.xml
+++ b/app/src/main/res/layout/activity_add_lead_customer.xml
@@ -64,7 +64,7 @@
                         android:drawableEnd="@drawable/contact_picker"
                         android:fontFamily="@font/brandontext_regular"
                         android:inputType="none"
-                        android:hint="Select Client Details"
+                        android:hint="@string/select_client_details"
                         android:longClickable="false"
                         android:maxLines="1"
                         android:singleLine="true"
@@ -120,7 +120,7 @@
                         android:drawablePadding="5dp"
                         android:drawableTint="@color/heading_lighter"
                         android:fontFamily="@font/brandontext_regular"
-                        android:hint="Enter price pitched to the user"
+                        android:hint="@string/enter_price_pitched_to_the_user"
                         android:inputType="number"
                         android:longClickable="false"
                         android:focusedByDefault="false"
@@ -151,7 +151,7 @@
                         android:drawableEnd="@drawable/date_picker"
 
                         android:fontFamily="@font/brandontext_regular"
-                        android:hint="Follow-up date"
+                        android:hint="@string/follow_up_date"
                         android:longClickable="false"
                         android:maxLines="1"
                         android:singleLine="true"
@@ -178,7 +178,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/brandontext_regular"
-                        android:hint="Enter other comments and notes"
+                        android:hint="@string/enter_other_comments_and_notes"
                         android:maxLines="1"
                         android:singleLine="true"
                         android:textColor="@color/heading_dark"
@@ -200,7 +200,7 @@
                 android:layout_marginBottom="32dp"
                 android:background="@drawable/round_button"
                 android:fontFamily="@font/brandontext_bold"
-                android:text="Save"
+                android:text="@string/save"
                 android:textAllCaps="false"
                 android:textColor="#fff"
                 android:textSize="22sp"
