--- a/app/src/main/res/layout/activity_industries.xml
+++ b/app/src/main/res/layout/activity_industries.xml
@@ -16,7 +16,7 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/brandontext_medium"
         android:gravity="center_horizontal"
-        android:text="Select your \npreferred industries"
+        android:text="@string/select_your_npreferred_industries"
         android:textColor="@color/heading_dark"
         android:textSize="24sp"
         app:layout_constraintBottom_toTopOf="@+id/txtTagline"
@@ -33,7 +33,7 @@
         android:layout_marginBottom="8dp"
         android:fontFamily="@font/brandontext_regular"
         android:gravity="center_horizontal"
-        android:text="We will personalise the products for you"
+        android:text="@string/we_will_personalise_the_products_for_you"
         android:textColor="@color/heading_light"
         android:textSize="20sp"
         app:layout_constraintBottom_toTopOf="@+id/gridview"
@@ -72,7 +72,7 @@
         android:layout_marginBottom="32dp"
         android:background="@drawable/round_button"
         android:fontFamily="@font/brandontext_bold"
-        android:text="Next"
+        android:text="@string/next"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:stateListAnimator="@animator/button_animator"
