--- a/app/src/main/res/layout/category_card.xml
+++ b/app/src/main/res/layout/category_card.xml
@@ -45,7 +45,7 @@
                     android:layout_marginTop="12dp"
                     android:layout_marginBottom="8dp"
                     android:fontFamily="@font/brandontext_medium"
-                    android:text="Car Loan"
+                    android:text="@string/car_loan"
                     android:textColor="@color/heading_dark"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toTopOf="@+id/earnupto"
@@ -58,7 +58,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
                     android:fontFamily="@font/brandontext_regular"
-                    android:text="10+ Products"
+                    android:text="@string/_10_products"
                     android:textColor="#8b8b8b"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="@+id/titlecategory"
@@ -70,7 +70,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="3dp"
                     android:fontFamily="@font/brandontext_medium"
-                    android:text="10,000"
+                    android:text="@string/_10_000"
                     android:textColor="@color/colorPrimary"
                     android:textSize="16sp"
                     app:layout_constraintBaseline_toBaselineOf="@+id/rupee_symbol"
@@ -80,7 +80,7 @@
                     android:id="@+id/salecategory"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="/sale"
+                    android:text="@string/sale"
                     android:textColor="#8b8b8b"
                     android:textSize="16sp"
                     app:layout_constraintBaseline_toBaselineOf="@+id/amountcategory"
@@ -91,7 +91,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
-                    android:text="\u20B9"
+                    android:text="@string/u20b9"
                     android:textColor="@color/colorPrimary"
                     android:fontFamily="@font/brandontext_regular"
                     android:textSize="16sp"
@@ -104,7 +104,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginStart="8dp"
                     android:fontFamily="@font/brandontext_regular"
-                    android:text="Upto"
+                    android:text="@string/upto"
                     android:textColor="#8b8b8b"
                     android:textSize="16sp"
                     app:layout_constraintStart_toStartOf="parent"
