--- a/app/src/main/res/layout/fragment_crm.xml
+++ b/app/src/main/res/layout/fragment_crm.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="32dp"
             android:fontFamily="@font/brandontext_medium"
-            android:text="Business owners who \nmaintain leads on \nCRM have 50% \n more conversions"
+            android:text="@string/business_owners_who_nmaintain_leads_on_ncrm_have_50_n_more_conversions"
             android:textAlignment="center"
             android:textColor="@color/heading_dark"
             android:textSize="24sp"
@@ -50,7 +50,7 @@
             android:background="@drawable/round_button"
             android:fontFamily="@font/brandontext_bold"
             android:stateListAnimator="@animator/button_animator"
-            android:text="Add your first lead now"
+            android:text="@string/add_your_first_lead_now"
             android:textAllCaps="false"
             android:textColor="#fff"
             android:textSize="22sp"
@@ -88,7 +88,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="5dp"
-                        android:text="Missed Follow-ups"
+                        android:text="@string/missed_follow_ups"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginBottom="16dp"
@@ -124,7 +124,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="5dp"
-                        android:text="Upcoming Follow-ups"
+                        android:text="@string/upcoming_follow_ups"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginBottom="16dp"
