--- a/app/src/main/res/layout/missed_follow_ups_card.xml
+++ b/app/src/main/res/layout/missed_follow_ups_card.xml
@@ -27,7 +27,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
                 android:fontFamily="@font/brandontext_medium"
-                android:text="Abhishek Singh"
+                android:text="@string/abhishek_singh"
                 android:textColor="@color/white"
                 android:textSize="22sp"
                 app:layout_constraintBottom_toTopOf="@+id/description"
@@ -41,7 +41,7 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginBottom="24dp"
                 android:fontFamily="@font/brandontext_medium"
-                android:text="Class 9th-Topper"
+                android:text="@string/class_9th_topper"
                 android:textColor="@color/white"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toBottomOf="parent"
