--- a/app/src/main/res/layout/activity_learn_how_it_works.xml
+++ b/app/src/main/res/layout/activity_learn_how_it_works.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/brandontext_medium"
         android:gravity="center_horizontal"
-        android:text="Learn how it works"
+        android:text="@string/learn_how_it_works"
         android:textColor="@color/heading_dark"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -83,7 +83,7 @@
         android:layout_marginBottom="32dp"
         android:background="@drawable/round_button_empty"
         android:fontFamily="@font/brandontext_bold"
-        android:text="Skip"
+        android:text="@string/skip"
         android:textAllCaps="false"
         android:textColor="@color/colorPrimary"
         android:textSize="22sp"
