--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,7 +18,7 @@
         android:fontFamily="@font/brandontext_medium"
         android:gravity="center_horizontal"
         android:inputType="textMultiLine"
-        android:text="Enter Mobile Number"
+        android:text="@string/enter_mobile_number"
         android:textColor="@color/heading_dark"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -55,7 +55,7 @@
         android:gravity="center_vertical"
         android:paddingRight="10dp"
         android:textColor="@color/heading_dark"
-        android:text="+91"
+        android:text="@string/_91"
         android:textSize="22sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/MNumber" />
@@ -71,7 +71,7 @@
         android:background="@drawable/round_button"
         android:fontFamily="@font/brandontext_bold"
         android:stateListAnimator="@animator/button_animator"
-        android:text="Register"
+        android:text="@string/register"
         android:textAllCaps="false"
         android:textColor="#fff"
         android:textSize="22sp"
@@ -101,7 +101,7 @@
         android:layout_marginTop="40dp"
         android:textColor="#8b8b8b"
         android:fontFamily="@font/brandontext_regular"
-        android:text="Mobile Number"
+        android:text="@string/mobile_number"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtEntermobile" />
