--- a/app/src/main/res/layout/activity_product_details.xml
+++ b/app/src/main/res/layout/activity_product_details.xml
@@ -107,7 +107,7 @@
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="16dp"
                             android:fontFamily="@font/brandontext_medium"
-                            android:text="Product Brochure"
+                            android:text="@string/product_brochure"
                             android:textColor="@color/heading_dark"
                             android:textSize="18sp"
                             app:layout_constraintStart_toStartOf="parent"
@@ -120,7 +120,7 @@
                             android:layout_marginStart="16dp"
                             android:layout_marginTop="6dp"
                             android:fontFamily="@font/brandontext_regular"
-                            android:text="Get to know more \nabout all the products \nfrom BYJU’s"
+                            android:text="@string/get_to_know_more_nabout_all_the_products_nfrom_byju_s"
                             android:textColor="@color/heading_lighter"
                             android:textSize="16sp"
                             app:layout_constraintStart_toStartOf="parent"
@@ -141,7 +141,7 @@
                             android:gravity="center"
                             android:paddingTop="5dp"
                             android:paddingBottom="5dp"
-                            android:text="Open Brochure"
+                            android:text="@string/open_brochure"
                             android:textAppearance="@style/WhatsappChipAppearance2"
                             android:textColor="@color/colorPrimary"
                             app:chipBackgroundColor="#fff"
@@ -180,7 +180,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:fontFamily="@font/brandontext_medium"
-                            android:text="BYJU's"
+                            android:text="@string/byju_s"
                             android:textAlignment="center"
                             android:textColor="@color/white"
                             android:textSize="24sp" />
@@ -223,7 +223,7 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="16dp"
                             android:fontFamily="@font/brandontext_medium"
-                            android:text="Share and earn!"
+                            android:text="@string/share_and_earn"
                             android:textColor="@color/heading_dark"
                             android:textSize="18sp"
                             app:layout_constraintStart_toStartOf="@+id/textView8"
@@ -236,7 +236,7 @@
                             android:layout_marginTop="6dp"
                             android:layout_marginEnd="16dp"
                             android:fontFamily="@font/brandontext_regular"
-                            android:text="Get to know more \nabout all the products \nfrom BYJU’s"
+                            android:text="@string/get_to_know_more_nabout_all_the_products_nfrom_byju_s"
                             android:textColor="@color/heading_lighter"
                             android:textSize="16sp"
                             app:layout_constraintEnd_toEndOf="parent"
@@ -257,7 +257,7 @@
                             android:gravity="center"
                             android:paddingTop="5dp"
                             android:paddingBottom="5dp"
-                            android:text="Share with client"
+                            android:text="@string/share_with_client"
                             android:textAppearance="@style/WhatsappChipAppearance2"
                             android:textColor="@color/colorPrimary"
                             app:chipBackgroundColor="#fff"
@@ -294,10 +294,10 @@
                         <ImageView
                             android:id="@+id/brochure_thumbnail"
                             android:layout_gravity="fill"
+                            android:transitionName="brochure_thumbnail"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:scaleType="centerCrop" />
-
 
                     </androidx.cardview.widget.CardView>
                 </androidx.constraintlayout.widget.ConstraintLayout>
@@ -316,7 +316,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:fontFamily="@font/brandontext_regular"
-                        android:text="Actual Market Price"
+                        android:text="@string/actual_market_price"
                         android:textColor="@color/heading_light"
                         android:textSize="18sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -328,7 +328,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:fontFamily="@font/brandontext_regular"
-                        android:text="Our Offer Price"
+                        android:text="@string/our_offer_price"
                         android:textColor="@color/heading_light"
                         android:textSize="18sp"
                         app:layout_constraintStart_toStartOf="@+id/textView6"
@@ -339,7 +339,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/brandontext_regular"
-                        android:text="\u20b915000"
+                        android:text="@string/u20b915000"
                         android:textColor="@color/heading_light"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -353,7 +353,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="32dp"
                         android:fontFamily="@font/brandontext_regular"
-                        android:text="\u20b913000"
+                        android:text="@string/u20b913000"
                         android:textColor="@color/heading_dark"
                         android:textSize="18sp"
                         android:textStyle="bold"
@@ -371,8 +371,7 @@
                     android:layout_marginStart="24dp"
                     android:layout_marginTop="24dp"
                     android:layout_marginEnd="24dp"
-                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout"
-                    app:layout_constraintTop_toBottomOf="@+id/spinner">
+                    app:hintTextAppearance="@style/TextAppearence.App.TextInputLayout">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/offer_discount_price"
@@ -383,14 +382,15 @@
                         android:drawableTint="@color/heading_lighter"
                         android:focusedByDefault="false"
                         android:fontFamily="@font/brandontext_regular"
-                        android:hint="Enter price pitched to the user"
+                        android:hint="@string/enter_price_pitched_to_the_user"
                         android:inputType="number"
                         android:longClickable="false"
                         android:maxLines="1"
                         android:singleLine="true"
                         android:textColor="@color/heading_dark"
                         android:textColorHint="@color/heading_lighter"
-                        android:textSize="18sp" />
+                        android:textSize="18sp"
+                        tools:targetApi="o" />
                 </com.example.neelanshsethi.sello.CustomTextInputLayout>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -413,7 +413,7 @@
                         android:paddingLeft="-5dp"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
-                        android:text="\u20b9100"
+                        android:text="@string/u20b9100"
                         android:textAppearance="@style/WhatsappChipAppearance2"
                         android:textColor="@color/colorPrimary"
                         app:chipBackgroundColor="#F5F5F5"
@@ -438,7 +438,7 @@
                         android:paddingLeft="-5dp"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
-                        android:text="\u20b9100"
+                        android:text="@string/u20b9100"
                         android:textAppearance="@style/WhatsappChipAppearance2"
                         android:textColor="@color/colorPrimary"
                         app:chipBackgroundColor="#F5F5F5"
@@ -463,7 +463,7 @@
                         android:paddingLeft="-5dp"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
-                        android:text="\u20b9100"
+                        android:text="@string/u20b9100"
                         android:textAppearance="@style/WhatsappChipAppearance2"
                         android:textColor="@color/colorPrimary"
                         app:chipBackgroundColor="#F5F5F5"
@@ -488,7 +488,7 @@
                         android:paddingLeft="-5dp"
                         android:paddingTop="5dp"
                         android:paddingBottom="5dp"
-                        android:text="\u20b9100"
+                        android:text="@string/u20b9100"
                         android:textAppearance="@style/WhatsappChipAppearance2"
                         android:textColor="@color/colorPrimary"
                         app:chipBackgroundColor="#F5F5F5"
@@ -517,7 +517,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="16dp"
                         android:fontFamily="@font/brandontext_regular"
-                        android:text="Your Customer Pays:"
+                        android:text="@string/your_customer_pays"
                         android:textColor="@color/heading_light"
                         android:textSize="18sp"
                         app:layout_constraintStart_toStartOf="parent"
@@ -529,7 +529,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="32dp"
                         android:fontFamily="@font/brandontext_medium"
-                        android:text="\u20b913000"
+                        android:text="@string/u20b913000"
                         android:textColor="@color/colorPrimary"
                         android:textSize="22sp"
                         android:textStyle="bold"
@@ -552,12 +552,11 @@
         android:background="@drawable/corner_button"
         android:fontFamily="@font/brandontext_bold"
         android:stateListAnimator="@animator/button_animator"
-        android:text="Earn \u20B91500 on this Product"
+        android:text="@string/earn_u20b91500_on_this_product"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="22sp"
         android:textStyle="bold"
         tools:targetApi="lollipop" />
-
 
 </RelativeLayout>
