--- a/app/src/main/res/layout/activity_user_info.xml
+++ b/app/src/main/res/layout/activity_user_info.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/brandontext_medium"
         android:gravity="center_horizontal"
-        android:text="Tell us more about yourself"
+        android:text="@string/tell_us_more_about_yourself"
         android:textColor="@color/heading_dark"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -53,7 +53,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:fontFamily="@font/brandontext_regular"
-        android:text="Name"
+        android:text="@string/name"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txttellus" />
@@ -65,7 +65,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:fontFamily="@font/brandontext_regular"
-        android:text="Location"
+        android:text="@string/location"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/view2" />
@@ -119,7 +119,7 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/round_button"
         android:fontFamily="@font/brandontext_bold"
-        android:text="Next"
+        android:text="@string/next"
         android:stateListAnimator="@animator/button_animator"
         android:textAllCaps="false"
         android:textColor="#fff"
