--- a/app/src/main/res/layout/activity_verify_phone_number.xml
+++ b/app/src/main/res/layout/activity_verify_phone_number.xml
@@ -20,7 +20,7 @@
         android:background="@drawable/round_button"
         android:fontFamily="@font/brandontext_bold"
         android:stateListAnimator="@animator/button_animator"
-        android:text="Submit OTP"
+        android:text="@string/submit_otp"
         android:textAllCaps="false"
         android:textColor="#fff"
         android:textSize="22sp"
@@ -51,7 +51,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:fontFamily="@font/brandontext_medium"
-        android:text="Resend OTP"
+        android:text="@string/resend_otp"
         android:textColor="@color/colorPrimary"
         android:textSize="22sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -91,7 +91,7 @@
         android:fontFamily="@font/brandontext_medium"
         android:gravity="center_horizontal"
         android:inputType="textMultiLine"
-        android:text="Please Enter OTP"
+        android:text="@string/please_enter_otp"
         android:textColor="@color/heading_dark"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
