--- a/app/src/main/res/layout/crm_rv_manageleads_dates.xml
+++ b/app/src/main/res/layout/crm_rv_manageleads_dates.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:text="TITLE HERE"
+        android:text="@string/title_here"
         android:fontFamily="@font/brandontext_regular"
         android:textColor="@color/heading_lighter"
         android:textAlignment="center"
