--- a/app/src/main/res/layout/industry_card.xml
+++ b/app/src/main/res/layout/industry_card.xml
@@ -21,7 +21,7 @@
         android:paddingLeft="-5dp"
         android:paddingTop="5dp"
         android:paddingBottom="5dp"
-        android:text="Education"
+        android:text="@string/education"
         android:textColor="@color/heading_dark"
         android:textSize="25sp"
         app:chipCornerRadius="22dp"
