--- a/app/src/main/res/layout/learn_video_card.xml
+++ b/app/src/main/res/layout/learn_video_card.xml
@@ -60,7 +60,7 @@
                 android:fontFamily="@font/brandontext_medium"
                 android:maxLines="1"
                 android:singleLine="true"
-                android:text="Car Loannndddddddddddd"
+                android:text="@string/car_loannndddddddddddd"
                 android:textColor="@color/heading_dark"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toTopOf="@+id/earnupto"
@@ -75,7 +75,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:fontFamily="@font/brandontext_regular"
-                android:text="10+ Products"
+                android:text="@string/_10_products"
                 android:textColor="#8b8b8b"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toTopOf="@+id/upto"
@@ -88,7 +88,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="3dp"
                 android:fontFamily="@font/brandontext_medium"
-                android:text="10,000"
+                android:text="@string/_10_000"
                 android:textColor="@color/colorPrimary"
                 android:textSize="16sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/rupee_symbol"
@@ -98,7 +98,7 @@
                 android:id="@+id/salecategory"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="/sale"
+                android:text="@string/sale"
                 android:textColor="#8b8b8b"
                 android:textSize="16sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/amountcategory"
@@ -110,7 +110,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:fontFamily="@font/brandontext_regular"
-                android:text="\u20B9"
+                android:text="@string/u20b9"
                 android:textColor="@color/colorPrimary"
                 android:textSize="16sp"
                 app:layout_constraintBaseline_toBaselineOf="@+id/upto"
@@ -122,7 +122,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="12dp"
                 android:fontFamily="@font/brandontext_regular"
-                android:text="Upto"
+                android:text="@string/upto"
                 android:textColor="#8b8b8b"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
